charts/immich/immich_clusterip_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-clusterip-service
  namespace: immich
spec:
  selector:
    app.kubernetes.io/instance: immich
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 2283
