charts/immich/immich_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-https
  namespace: immich
  annotations:
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/instance: immich
spec:
  tls:
  - hosts:
    - immich.baudolino84.com
    secretName: immich-tls
  ingressClassName: public # Needs to be specified if no default class is set
  rules:
  - host: immich.baudolino84.com
    http:
      paths:
      - backend:
          service:
            name: immich-clusterip-service
            port:
              number: 80
        path: /
        pathType: Prefix
